--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 20px 0px;
+    padding: 20px 0;
 }
 
 .header-logo {
@@ -45,7 +45,7 @@ body {
     font-weight: 400;
     font-size: 16px;
     color: #000000;
-    padding: 0px 52px;
+    padding: 0 52px;
 }
 
 .header-btn button {
@@ -56,7 +56,7 @@ body {
     background: none;
     border-radius: 8px;
     cursor: pointer;
-    margin: 0px 15px;
+    margin: 0 15px;
 }
 
 /*header*/
